# postgres-playground

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  renovate.json  renovate.json.bak  setup.cfg
.github/: dependabot.yml
.github/workflows/: check.yml  stale.yml  test.yml
tests/: conftest.py
tests/crud_peewee/: create.sql  insert.sql  test_create_table.py
tests/exporter/: export.sql  export_json.sql  test_exporter.py
tests/fixtures/orm/: peewee.py  psycopg2.py
tests/json_aggregator/: create_and_insert.sql  test_json_aggregator.py
tests/peewee/: insert.sql  test_orm_peewee.py
tests/psycopg2/: create.sql  test_orm_psycopg2.py
tests/udemy_course/: 003_create.sql  005_insert.sql  013a_select.sql  013b_select.sql  022_update.sql  023_delete.sql  028a_create.sql  028b_insert.sql  028c_create.sql  028d_insert.sql  028e_select.sql  create_cities_table.sql  test_section01.py  test_section02.py  test_section03.py
