[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "learning-postgresql"
version = "0.1.0"
description = ""
authors = ["Fredrik Averpil <fredrik.averpil@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-randomly = "^3.12.0"
psycopg2-binary = "^2.9.6"
peewee = "^3.16.2"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
ruff = "*"

[tool.ruff]
src = ["src", "tests"]
line-length = 88  # black default
select = ["ALL"]
ignore = [
    "D202"  # no blank lines after docstring
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",  # assert used
    "S105"  # hardcoded password
]

[tool.ruff.isort]
known-first-party = ["my_module1", "my_module2"]

[tool.pytest.ini_options]
testpaths = "tests"

[[tool.mypy.overrides]]
module = [
    "playhouse.*",
]
ignore_missing_imports = true

