[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "learning-postgresql"
version = "0.1.0"
description = ""
authors = ["Fredrik Averpil <fredrik.averpil@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
pytest-randomly = "^3.15.0"
psycopg2-binary = "^2.9.9"
peewee = "^3.17.6"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
ruff = "*"  # avoid dependabot noise

[tool.ruff]
src = ["src", "tests"]
line-length = 88       # black default
select = ["ALL"]
ignore = ["D"]

[tool.ruff.per-file-ignores]
"tests/*" = [
  "S101", # assert used
  "S105", # hardcoded password
]

[tool.ruff.isort]
known-first-party = ["my_module1", "my_module2"]

[tool.pytest.ini_options]
testpaths = "tests"

[[tool.mypy.overrides]]
module = ["playhouse.*"]
ignore_missing_imports = true
